projects/gitops-workflow-lab/apps/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: platform-dev
spec:
  rules:
    - host: podinfo-dev.local
